Configurable number of packets in flight in FastIRL algorithm.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -4893,6 +4893,9 @@
         }
       }
     },
+    "200 by default." : {
+
+    },
     "213.33.45.132" : {
       "localizations" : {
         "de" : {
