Only show OBS remote control page in wizard when OBS is (likely) used.

--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -10167,6 +10167,7 @@
       }
     },
     "Best possible stability. Uses bonding. Paid service." : {
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -10277,6 +10278,9 @@
           }
         }
       }
+    },
+    "Best possible stability. Uses bonding. Paid third-party service." : {
+
     },
     "Big packets" : {
       "localizations" : {
